src/global/index.css
@import "./fonts.css";
@import "./root.css";
@import "./common.css";

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
  font-family: "Outfit", sans-serif;
}

body {
  background: radial-gradient(
    ellipse at top center,
    #00293c 0%,
    #00121c 25%,
    #000409 55%,
    #000000 90%,
    #000000 100%
  );
  color: var(--light-clr);
  width: min(43.75rem, 100% - 2.5rem);
  margin-inline: auto;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

main {
  display: flex;
  flex-direction: column;
  gap: var(--bg-size);
  min-height: 100vh;
}

@media (max-width: 768px) {
  body {
    background-size: 200% 100%;
  }
}

